update documents using new fixdoc

--- a/doc/lib/crypto/sha256.md
+++ b/doc/lib/crypto/sha256.md
@@ -1,6 +1,4 @@
-# sha256.fix
-
-## module Minilib.Crypto.SHA256
+# Module Minilib.Crypto.SHA256 (sha256.fix)
 
 SHA-256 secure hash function.
 
@@ -13,11 +11,11 @@ FIPS 180-4 (2015):
 http://dx.doi.org/10.6028/NIST.FIPS.180-4
 
 
-#### digest: Array U8 -> Array U8;
+### `digest: Array U8 -> Array U8;`
 
 `SHA256::digest(bytes)` computes SHA-256 secure hash function of `bytes`.
 
-### type SHA256
+### `type SHA256`
 
 SHA-256 hasher.
 Usually it is sufficient to simply call `SHA256:digest(bytes)` without using this structure.
@@ -29,15 +27,15 @@ type SHA256 = unbox struct {
     msgbuf: Array U8
 };
 ```
-#### empty: SHA256;
+### `empty: SHA256;`
 
 An empty SHA-256 hasher.
 
-#### update: Array U8 -> SHA256 -> SHA256;
+### `update: Array U8 -> SHA256 -> SHA256;`
 
 `sha256.update(bytes)` processes `bytes`, and updates its internal state.
 
-#### finalize: SHA256 -> Array U8;
+### `finalize: SHA256 -> Array U8;`
 
 `sha256.finalize` retrieves a final SHA-256 hash value.
 
