--- a/doc/lib/crypto/sha512.md
+++ b/doc/lib/crypto/sha512.md
@@ -1,6 +1,4 @@
-# sha512.fix
-
-## module Minilib.Crypto.SHA512
+# Module Minilib.Crypto.SHA512 (sha512.fix)
 
 SHA-512 secure hash function.
 
@@ -13,17 +11,17 @@ FIPS 180-4 (2015):
 http://dx.doi.org/10.6028/NIST.FIPS.180-4
 
 
-#### digest: Array U8 -> Array U8;
+### `digest: Array U8 -> Array U8;`
 
 `SHA512::digest(bytes)` computes SHA-512 secure hash function of `bytes`.
 
-### namespace SHA384
+## `namespace SHA384`
 
-#### digest: Array U8 -> Array U8;
+### `digest: Array U8 -> Array U8;`
 
 `SHA384::digest(bytes)` computes SHA-384 secure hash function of `bytes`.
 
-### type SHA512
+### `type SHA512`
 
 SHA-512 hasher.
 Usually it is sufficient to simply call `SHA512:digest(bytes)` without using this structure.
@@ -35,15 +33,15 @@ type SHA512 = unbox struct {
     msgbuf: Array U8
 };
 ```
-#### empty: SHA512;
+### `empty: SHA512;`
 
 An empty SHA-512 hasher.
 
-#### update: Array U8 -> SHA512 -> SHA512;
+### `update: Array U8 -> SHA512 -> SHA512;`
 
 `sha512.update(bytes)` processes `bytes`, and updates its internal state.
 
-#### finalize: SHA512 -> Array U8;
+### `finalize: SHA512 -> Array U8;`
 
 `sha512.finalize` retrieves a final SHA-512 hash value.
 
